# cozy

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/cozy/: __about__.py  chatgpt.py  cozyqt.py  gemini_1.py  testui.py
src/cozy/model/: api.py  models.py
tests/: __init__.py
