[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cozy"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Éric Daigneault", email = "Newtopian@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "PySimpleGui~=4.60.5",
]

[project.urls]
Documentation = "https://github.com/unknown/cozy#readme"
Issues = "https://github.com/unknown/cozy/issues"
Source = "https://github.com/unknown/cozy"

[tool.hatch.version]
path = "src/cozy/__about__.py"

[tool.hatch.envs.default]
type = "virtual"
path = "./venv"
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
  "pydantic",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/cozy tests}"

[tool.coverage.run]
source_pkgs = ["cozy", "tests"]
branch = true
parallel = true
omit = [
  "src/cozy/__about__.py",
]

[tool.coverage.paths]
cozy = ["src/cozy", "*/cozy/src/cozy"]
tests = ["tests", "*/cozy/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
